--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -14,13 +14,14 @@ Devloper:	Hady Rabie - Mohamed Salah
 6. Filter
 7. Paginator
 8. Form
-9. Comments
-10. Reviews
-11. Page 404
-12. Modal
-13. select2 customization
-14. mCustomScrollbar customization
-15. Loading
+9.Edit User
+10. Comments
+11. Reviews
+12. Page 404
+13. Modal
+14. select2 customization
+15. mCustomScrollbar customization
+16. Loading
 
 ----------------------------------------*/
 /*==============================
@@ -1505,6 +1506,303 @@ ul {
   }
 }
 
+/*==============================
+	Edit User
+==============================*/
+.profile__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 20px;
+  background-color: var(--blue);
+  margin-bottom: 20px;
+  position: relative;
+  border-radius: 6px;
+}
+.profile__user {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.profile__meta {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  height: 40px;
+}
+.profile__meta h3 {
+  color: #fff;
+  display: block;
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 0;
+  line-height: 20px;
+}
+.profile__meta span {
+  color: rgba(255,255,255,0.7);
+  font-size: 14px;
+  line-height: 20px;
+}
+.profile__meta--green h3 span {
+  color: #29b474;
+}
+.profile__meta--red h3 span {
+  color: #eb5757;
+}
+.profile__avatar {
+  display: block;
+  position: relative;
+  width: 40px;
+  cursor: pointer;
+  overflow: hidden;
+  border-radius: 6px;
+  margin-right: 15px;
+  border: 1px solid rgba(255,255,255,0.1);
+}
+.profile__avatar img {
+  width: 100%;
+}
+.profile__tabs {
+  display: none;
+}
+.profile__mobile-tabs {
+  position: relative;
+  margin-bottom: -10px;
+}
+.profile__mobile-tabs-btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  cursor: pointer;
+  height: 30px;
+  transition: 0.4s ease;
+}
+.profile__mobile-tabs-btn input {
+  display: block;
+  position: relative;
+  width: auto;
+  background-color: transparent;
+  border: none;
+  font-size: 16px;
+  color: #fff;
+  cursor: pointer;
+  height: 30px;
+  margin-right: 10px;
+}
+.profile__mobile-tabs-btn span {
+  position: relative;
+  width: 16px;
+  height: 16px;
+  display: block;
+  margin-top: 3px;
+}
+.profile__mobile-tabs-btn span:before,
+.profile__mobile-tabs-btn span:after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 16px;
+  height: 2px;
+  background-color: #fff;
+  left: 0;
+  top: 50%;
+  transition: 0.4s ease;
+  margin-top: -5px;
+  border-radius: 2px;
+}
+.profile__mobile-tabs-btn span:after {
+  margin-top: 2px;
+  width: 10px;
+}
+.profile__mobile-tabs-btn[aria-expanded="true"] span:before {
+  transform: rotate(45deg);
+  margin-top: -2px;
+  background-color: #f9ab00;
+}
+.profile__mobile-tabs-btn[aria-expanded="true"] span:after {
+  margin-top: -2px;
+  width: 16px;
+  transform: rotate(-45deg);
+  background-color: #f9ab00;
+}
+.profile__mobile-tabs-btn:hover span:before,
+.profile__mobile-tabs-btn:hover span:after {
+  background-color: #f9ab00;
+}
+.profile__mobile-tabs-menu {
+  top: 100%;
+  left: 0;
+  margin-top: -10px;
+  min-width: 200px;
+  padding: 20px;
+  background-color: #222028;
+  display: block;
+  transition: 0.4s ease;
+  position: absolute;
+  z-index: 100;
+  pointer-events: none;
+  opacity: 0;
+  border-radius: 6px;
+}
+.profile__mobile-tabs-menu li a {
+  margin-bottom: 15px;
+}
+.profile__mobile-tabs-menu li:last-child a {
+  margin-bottom: 0;
+}
+.profile__mobile-tabs-menu a {
+  display: block;
+  font-size: 14px;
+  color: #fff;
+  position: relative;
+  width: 100%;
+}
+.profile__mobile-tabs-menu a:hover {
+  color: #f9ab00;
+}
+.profile__mobile-tabs-menu a.active {
+  display: none;
+}
+.profile__mobile-tabs-menu.show {
+  pointer-events: auto;
+  opacity: 1;
+  margin-top: 0;
+}
+.profile__actions {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+.profile__action {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  font-size: 16px;
+  color: #fff;
+  border-radius: 6px;
+  background-color: rgba(255,255,255,0.05);
+  margin-right: 10px;
+}
+.profile__action:last-child {
+  margin-right: 0;
+}
+.profile__action--delete {
+  background-color: rgba(235,87,87,0.08);
+  color: #eb5757;
+}
+.profile__action--delete:hover {
+  color: #eb5757;
+  background-color: rgba(235,87,87,0.2);
+}
+.profile__action--banned {
+  background-color: rgba(41,180,116,0.08);
+  color: #29b474;
+}
+.profile__action--banned:hover {
+  color: #29b474;
+  background-color: rgba(41,180,116,0.2);
+}
+@media (min-width: 768px) {
+  .profile__content {
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0 20px;
+    height: 80px;
+    margin-bottom: 30px;
+  }
+  .profile__user {
+    width: auto;
+    margin-bottom: 0;
+    margin-right: 40px;
+  }
+  .profile__tabs {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    overflow: hidden;
+  }
+  .profile__tabs li {
+    margin-right: 40px;
+  }
+  .profile__tabs li:last-child {
+    margin-right: 0;
+  }
+  .profile__tabs a {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    height: 80px;
+    color: #fff;
+    position: relative;
+    text-transform: uppercase;
+    font-size: 14px;
+  }
+  .profile__tabs a:hover {
+    color: #f9ab00;
+  }
+  .profile__tabs a:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 2px;
+    display: block;
+    background-color: #f9ab00;
+    transition: 0.4s ease;
+    transform: translateY(2px);
+    opacity: 0;
+    border-radius: 2px 2px 0 0;
+  }
+  .profile__tabs a.active {
+    color: #f9ab00;
+  }
+  .profile__tabs a.active:before {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  .profile__mobile-tabs {
+    display: none;
+  }
+  .profile__actions {
+    position: relative;
+    top: auto;
+    right: auto;
+    margin-left: auto;
+  }
+  .profile__action {
+    margin-right: 15px;
+  }
+  .profile__action:last-child {
+    margin-right: 0;
+  }
+}
+@media (min-width: 1200px) {
+  .profile__tabs li {
+    margin-right: 45px;
+  }
+  .profile__tabs li:last-child {
+    margin-right: 0;
+  }
+  .profile__user {
+    margin-right: 60px;
+  }
+}
 /*==============================
 	Comments
 ==============================*/
