--- a/asstes/css/bootstrap.css
+++ b/asstes/css/bootstrap.css
@@ -10352,7 +10352,14 @@ a.text-dark:hover, a.text-dark:focus {
   margin-right: auto;
   margin-left: auto;
 }
-
+@media (max-width: 740px) {
+	.container-custom {
+		padding-right: 15px;
+		padding-left: 15px;
+		margin-right: auto;
+		margin-left: auto;
+	}
+}
 .productRow{
 	display: flex;
     flex-wrap: wrap;
