--- a/asstes/css/style-item.css
+++ b/asstes/css/style-item.css
@@ -161,7 +161,7 @@ to {
 }
 header .titleCard, .story, .details, .down-watch{
 	width: 90%;
-    margin: 0 auto;
+    margin: 5px auto;
     color: var(--darkMode);
 }
 header .story h5{ color: var(--yellow);}
@@ -191,11 +191,12 @@ header .details, .down-watch{
 }
 /* download watch */
 .down-watch .watch ,.down{
-	width: 200px;
-	min-height:60px;
+	max-width: 200px;
+    min-height: 60px;
     text-align: center;
     display: flex;
-	align-items: center;
+    letter-spacing: 2px;
+    align-items: center;
     font-size: 18px;
     padding: 12px;
     font-size: 18px;
@@ -203,7 +204,8 @@ header .details, .down-watch{
     color: var(--darkMode)!important;
     border-radius: 10px;
     border: 0.5px solid var(--underline);
-	transition: all 0.3s ease
+    transition: all 0.3s ease;
+    justify-content: center;
 }
 .down-watch .watch:hover ,.down:hover{
     color: #bdbdbd!important;
@@ -709,11 +711,14 @@ details summary{
 	}
 	/* download watch */
 	.down-watch .watch,.down-watch .down{
-		padding: 10px;
+		padding: 10px 5px;
 		font-size: 18px!important;
 		color: var(--darkMode);
 		border-radius: 10px;
 		box-shadow: none;
+	}
+	.down-watch .watch{
+		margin-right: 10px;
 	}
 }
 @media (max-width: 990px) {
