--- a/asstes/css/style-login.css
+++ b/asstes/css/style-login.css
@@ -1,3 +1,16 @@
+/*----------------------------------------
+Project:	Blur.TV HTML Template
+
+Devloper:	Hady Rabie - Mohamed Salah
+----------------------------------------*/
+/*----------------------------------------
+[Table of contents]
+
+1. fonts
+2. Common styles
+3. Login
+
+*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
 
 
@@ -24,6 +37,11 @@ body,
 input {
   font-family: "Poppins", sans-serif;
 }
+
+
+/* ========================= 
+  LogIn Logout
+========================= */
 /*...... logo .......*/
 .logo{
 	width: 150px;
@@ -47,11 +65,6 @@ input {
     backdrop-filter: blur(5px);
 		background: linear-gradient(45deg, rgba(0,0,0,0) 0%, rgba(0, 0, 0, 0.499) 38%, rgba(0, 0, 0, 0.764) 71%);
   }
-
-
-/* ========================= 
-  LogIn Logout
-========================= */
 .container {
   position: relative;
   width: 100%;
@@ -243,7 +256,7 @@ form.sign-in-form {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  justify-content: space-around;
+  justify-content:flex-start!important;
   text-align: center;
   z-index: 6;
 }
@@ -401,7 +414,6 @@ form.sign-in-form {
     transition: transform 0.9s ease-in-out;
     transition-delay: 0.8s;
   }
-
   .panel h3 {
     font-size: 1.2rem;
   }
@@ -418,14 +430,14 @@ form.sign-in-form {
   }
 
   .container:before {
-    width: 1500px;
-    height: 1500px;
-    transform: translateX(-50%);
-    left: 30%;
-    bottom: 68%;
-    right: initial;
-    top: initial;
-    transition: 2s ease-in-out;
+      width: 1500px;
+      height: 1500px;
+      transform: translateX(-50%);
+      left: 50%;
+      bottom: 80%;
+      right: initial;
+      top: initial;
+      transition: 2s ease-in-out;
   }
 
   .container.sign-up-mode:before {
