--- a/asstes/css/style-profile.css
+++ b/asstes/css/style-profile.css
@@ -1,3 +1,5 @@
+/*  ناقصه كلين كود */
+
 /*----------------------------------------
 Project:	Blur.TV HTML Template
 
@@ -6,11 +8,11 @@ Devloper:	Hady Rabie - Mohamed Salah
 /*----------------------------------------
 [Table of contents]
 
-1. Fonts
-2. Common styles
-3. Theme Dark & light
-4. bar
-5. Aside
+1. Theme Dark & light
+2. Header
+2. Profile
+4. Stats
+5. dashbox
 6. Footer
 7. Loading
 
@@ -114,15 +116,21 @@ html[data-theme="lightMode"]{
   color: rgba(255,255,255,0.7) ;
   font-size: 14px;
 }
-.btn-Camera{
-  background: #212027b8;
+.profile__avatar .btn-Camera{
+    background: #212027d9;
     border-radius: 10px;
-    width: 45px;
-    height: 35px;
+    width: 100%;
+    height: 100%;
     font-size: 20px;
     align-items: center;
     display: flex;
+    position: absolute;
     justify-content: center;
+    transition: all 0.5s ease;
+    opacity: 0;
+}
+.profile__avatar:hover .btn-Camera{
+        opacity: 1;
 }
 .profile__avatar {
   display: block;
@@ -906,9 +914,6 @@ price
 .main__table-text--grey {
   color: rgba(255,255,255,0.5);
 }
-
-
-
 /*==============================
 	Form
 ==============================*/
@@ -993,7 +998,7 @@ price
   font-size: 14px;
   color: var(--darkMode);
   text-transform: uppercase;
-  border: 2px solid #f9ab00;
+  border: 2px solid var(--blue-red);
 }
 .form__btn:hover {
   color: #fff;
