--- a/asstes/css/style-payment.css
+++ b/asstes/css/style-payment.css
@@ -1,21 +1,235 @@
-@import url("https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600,700|Source+Sans+Pro:400,600,700&display=swap");
-body {
-  background: #ddeefc;
-  font-family: "Source Sans Pro", sans-serif;
-  font-size: 16px;
+/*  ناقصه كلين كود */
+
+/*----------------------------------------
+Project:	Blur.TV HTML Template
+
+Devloper:	Hady Rabie - Mohamed Salah
+----------------------------------------*/
+/*----------------------------------------
+[Table of contents]
+
+1. Theme Dark & light
+2. Header
+2. Profile
+4. Stats
+5. dashbox
+6. Footer
+7. Loading
+
+/*==============================
+Theme Dark & light
+==============================*/
+:root{
+	--lightMode: #eeeeee;
+	--darkMode: rgba(9,18,32,1);
+	--yellow: orange;
+	--red: #0051ff;
+	--blue-red: #FF0000;
+	--red-blue: #0051ff;
+	--blue-white: #eeeeee;
+	--mov: #4b4b4f;
+	--blue: #fff;
+	--blue2: #EEE;
+	--blue3: #0051ff;
+	--aside: #ffffff;
+	--head: #091226;
+	--yellow-blue: #0051ff;
+	--gray-blue: #3C4B57;
+	--underline: #00000042;
+	--opacity: rgba(233, 233, 233, 0.544);
+	--opacity1:#eeeeee;
+	--opacity2:#ffd4d645;
+	--opacity3:#f0edff00;
+	--blue-gray-blue: #3C4B57;
+	--bg-gradient:rgba(0, 45, 107, 0);
+	--btn-blur2: #eeeeeeb6;
+	--btn-blur:#eeeeeeb4;
 }
 
-* {
-  box-sizing: border-box;
+html[data-theme="lightMode"]{
+	--darkMode: #EEE;
+	--lightMode: rgba(9,18,32,1);
+	--yellow: #F7FF00;
+	--red-blue: #FF0000;
+	--blue-red: #0051ff;
+	--red: #FF0000;
+	--blue-white: #0B1538;
+	--head: #09122600;
+	--yellow-blue: #f9ab00;
+	--mov: #111C5F;
+	--blue: #0B1538;
+	--blue2: rgba(9,18,32,1);
+	--blue3: #091226;
+	--aside: #0b1538d1;
+	--gray-blue: #091226;
+	--gray: #35363a00;
+	--underline: #eeeeee42;
+	--opacity:rgba(9, 18, 32, 0.895);
+	--opacity1: rgba(9,18,32,1);
+	--opacity2: rgba(0,0,0,0.6980042016806722);
+	--blue-gray-blue: #091226;
+	--opacity3: rgba(0,0,0,0);
+	--bg-gradient:rgba(0, 44, 107, 0.62);
+	--btn-blur:rgba(9,18,32,1);
+	--btn-blur2:rgba(9,18,32,1);
 }
+
 *:focus {
   outline: none;
 }
 
+
+
+/* Start Header  */
+.poseterHeader {
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    letter-spacing: 2px;
+    font-size: 3rem;
+    padding-bottom: 25px;
+    position: relative;
+    width: 100%;
+    height: 260px;
+    background: linear-gradient(20deg,rgba(3, 3, 3, 0.911), rgba(0, 0, 0, 0.445)), url(../img/cover.jpg) no-repeat center center /cover;
+}
+/* End Header  */
+/*==============================
+	price
+==============================*/
+.payment{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: -100px;
+  position: sticky;
+  margin-bottom: 50px;
+}
+.pricing{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 2rem;
+}
+.card-wrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 320px;
+  height: auto;
+  background-color: var(--blue2);
+color: var(--darkMode);
+  border-radius: 20px;
+  box-shadow:  0 5px 14px rgba(0, 0, 0, 0.25),                            rgba(0, 0, 0, 0.22);
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  padding: 2rem;
+  margin: 1rem;
+  transform: all 0.2s ease-in;
+  -webkit-transform: all 0.2s ease-in;
+  -moz-transform: all 0.2s ease-in;
+  -ms-transform: all 0.2s ease-in;
+  -o-transform: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  -ms-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+box-shadow: 3px 7px 10px rgb(0 0 0 / 35%);
+}
+.card-wrapper:hover{
+color: var(--darkMode);
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+}
+
+.card-wrapper:hover .card-header > h2{
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  color: #5222d0;
+  letter-spacing: 2;
+}
+.card-header{
+  margin-top: 1rem;
+  text-align: center;
+}
+.card-price{
+display: flex;
+  align-items: center;
+  flex-direction: column;
+margin-bottom: 2em;
+}
+.card-price > h2{
+  font-size: 3rem;
+  font-weight: 800;
+}
+.card-price > span  {
+font-size: 1rem;
+}
+.card-detail{
+  width: 100%;
+}
+.card-detail p{
+  padding: 0.6rem 1.5rem;
+  font-size: 0.8rem;
+  border-bottom: 1px solid var(--cyan);
+}
+.check{
+  color: #5222d0;
+}
+.nocheck{
+  color: #ec615b;
+}
+.card-button{
+border: 2px solid #5222d0;
+background-color: #5222d0;
+color:#fff;
+border-radius: 30px;
+cursor: pointer;
+  padding: 10px 40px;
+  margin-top: 2em;
+transition: all 50ms ease-in ;
+-webkit-border-radius: 30px;
+-moz-border-radius: 30px;
+-ms-border-radius: 30px;
+-o-border-radius: 30px;
+-webkit-transition: all 50ms ease-in ;
+-moz-transition: all 50ms ease-in ;
+-ms-transition: all 50ms ease-in ;
+-o-transition: all 50ms ease-in ;
+}
+.card-button:hover{
+  border: 2px solid #ec615b;
+  background-color: transparent;
+  color: #ec615b;
+  font-weight: 800;
+}
+
+/*==============================
+price
+==============================*/
+
 .wrapper {
-  min-height: 100vh;
+  position:absolute;
+  top: 0;
+  left: 0;
+  background: #00000087;
+  min-height: 100%;
+  width: 100%;
   display: flex;
   padding: 50px 15px;
+  z-index: 1000;
+  display: none;
 }
 @media screen and (max-width: 700px), (max-height: 500px) {
   .wrapper {
@@ -35,8 +249,8 @@ body {
   }
 }
 .card-form__inner {
-  background: #fff;
-  box-shadow: 0 30px 60px 0 rgba(90, 116, 148, 0.4);
+  background: var(--blue);
+  /* box-shadow: 0 30px 60px 0 rgba(90, 116, 148, 0.4); */
   border-radius: 10px;
   padding: 35px;
   padding-top: 180px;
@@ -103,14 +317,15 @@ body {
 .card-form__button {
   width: 100%;
   height: 55px;
-  background: #2364d2;
+  box-shadow: inset 1px 1px 10px rgb(88 105 255 / 77%);
+	background: var(--lightMose);
   border: none;
   border-radius: 5px;
   font-size: 22px;
   font-weight: 500;
   font-family: "Source Sans Pro", sans-serif;
-  box-shadow: 3px 10px 20px 0px rgba(35, 100, 210, 0.3);
-  color: #fff;
+  /* box-shadow: 3px 10px 20px 0px rgba(35, 100, 210, 0.3); */
+  color: var(--darkMode);
   margin-top: 20px;
   cursor: pointer;
 }
@@ -511,7 +726,7 @@ body {
   font-size: 14px;
   margin-bottom: 5px;
   font-weight: 500;
-  color: #1a3b5d;
+  color: var(--darkMode);
   width: 100%;
   display: block;
   user-select: none;
@@ -526,7 +741,7 @@ body {
   font-size: 18px;
   padding: 5px 15px;
   background: none;
-  color: #1a3b5d;
+  color: var(--darkMode);
   font-family: "Source Sans Pro", sans-serif;
 }
 .card-input__input:hover, .card-input__input:focus {
