--- a/asstes/css/style-home.css
+++ b/asstes/css/style-home.css
@@ -193,22 +193,23 @@ html[data-theme="lightMode"]{
     left: 0;
     width: 100%;
     height: 100%;
-    margin: 0;
     display: flex;
     background: hsl(0deg 0% 0% / 64%);
     z-index: 10000000;
     justify-content: center;
     align-items: center;
+    padding: 15px 0;
+    margin: 0;
 }
 .containercards {
 	display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    border: 1px solid #eeeeee38;
+    /* border: 1px solid #eeeeee38; */
     border-radius: 10px;
-    background: #09021e;
-    backdrop-filter: blur(15px);
+    background: #09021e94;
+    backdrop-filter: blur(5px);
     height: 100%;
     width: 550px;
     min-width: 300px;
