--- a/asstes/css/style-profile.css
+++ b/asstes/css/style-profile.css
@@ -334,7 +334,7 @@ html[data-theme="lightMode"]{
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 0 20px 0;
+  padding: 20px 20px 20px 0;
 }
 .dashbox__title h3 {
   display: flex;
